pamc/src/tests/sample_code/should_succeed/multi_file/no_warnings/pack_relative_with_alias/src/foo/bar.ph
pub(pack.foo.boo) type Nat {
    .O: Nat,
    .S(n: Nat): Nat,
}
