pamc/src/tests/sample_code/should_fail/multi_file/bind/let_value_priv/src/nat.ph
type Nat {
    .O: Nat,
    .S(n: Nat): Nat,
}
